# Draw-In-ITerm

./: .gitignore  README.md  pyproject.toml
docs/: README.zh-CN.md
src/: draw_in_iterm.py
src/draw_iterm/: app.py  braille.py  cli.py  spline.py
tests/: test_braille.py  test_spline.py
