[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "draw-iterm"
version = "0.1.0"
description = "A terminal whiteboard for iTerm2: draw smooth curves with the mouse, clear with 'c', quit with 'q'."
readme = "README.md"
authors = [{name = "Draw-In-ITerm Authors"}]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
draw = "draw_iterm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["draw_iterm*"]

